--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "search",
+  "name": "country-searcher",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.6.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-loader-spinner": "^3.1.14",
+    "react-scripts": "3.4.3",
+    "react-spinners": "^0.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
