--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.6.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.8.6",
     "react-loader-spinner": "^3.1.14",
     "react-scripts": "3.4.3",
     "react-spinners": "^0.9.0"
