--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.6",
     "react-loader-spinner": "^3.1.14",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.1",
     "react-spinners": "^0.9.0"
   },
   "scripts": {
