--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.6.6",
+    "classnames": "^2.2.6",
+    "formik": "^2.2.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-hook-form": "^6.8.6",
+    "react-hook-form": "^6.12.2",
     "react-loader-spinner": "^3.1.14",
+    "react-redux": "^7.2.2",
     "react-scripts": "^4.0.1",
-    "react-spinners": "^0.9.0"
+    "react-spinners": "^0.9.0",
+    "redux": "^4.0.5",
+    "redux-form": "^8.3.7",
+    "yup": "^0.32.5"
   },
   "scripts": {
     "start": "react-scripts start",
