--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@svgdotjs/svg.js": "^3.0.16",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -19,6 +20,7 @@
     "react-spinners": "^0.9.0",
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
+    "redux-thunk": "^2.3.0",
     "yup": "^0.32.5"
   },
   "scripts": {
