--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,12 @@
     "prettier"
   ],
   "rules": {
-    "prettier/prettier": "error",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
     "react/prop-types": 0,
     "no-unused-vars": "warn",
     "no-console": "off",
