--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-hook-form": "^6.12.2",
     "react-loader-spinner": "^3.1.14",
     "react-redux": "^7.2.2",
-    "react-scripts": "^4.0.1",
+    "react-scripts": "^5.0.1",
     "react-spinners": "^0.9.0",
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
@@ -31,9 +31,6 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -47,7 +44,10 @@
     ]
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "gh-pages": "^3.1.0",
-    "gh-pages-deploy": "^0.5.1"
+    "gh-pages-deploy": "^0.5.1",
+    "prettier": "2.6.2"
   }
 }
