--- a/.eslintrc
+++ b/.eslintrc
@@ -5,9 +5,7 @@
     "node": true
   },
   "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "plugin:react/jsx-runtime",
+    "react-app",
     "prettier"
   ],
   "parserOptions": {
